# social-media-project

./: database.py  db.sql  main.py  pyproject.toml
auth/: enums.py  models.py  service.py
