[project]
name = "social-media-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "click>=8.2.1",
    "fastapi>=0.116.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
